--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -19,12 +19,8 @@
     "sobre atomico": "About Atómico3",
     "idiomas": "Languages",
     "terms": "Terms and conditions",
-    "privacy": "Privacy policy"
-
-
-
-    
-
+    "privacy": "Privacy policy",
+    "trabaja": "Work with us"
   },
   "nosotros": {
     "title": "We are a company legally incorporated in Paraguay, dedicated to the development and optimization of mining activity. We provide them with the tool of tokenization of certified lithium reserves, seeking to innovate and revolutionize the electromobility industry. ",
