--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -18,7 +18,8 @@
     "sobre atomico": "Sobre Atómico3",
     "idiomas": "Idiomas",
     "terms": "Términos y condiciones",
-    "privacy": "Política de privacidad"
+    "privacy": "Política de privacidad",
+    "trabaja": "Trabaja con nosotros"
 
 
 
