advances on navbar

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -20,7 +20,10 @@
     "idiomas": "Languages",
     "terms": "Terms and conditions",
     "privacy": "Privacy policy",
-    "trabaja": "Work with us"
+    "trabaja": "Work with us",
+   "proyectos de": "Tokenization",
+    "tokenizacion": "projects",
+    "nuestros proyectos": "Our Proyects"
   },
   "nosotros": {
     "title": "We are a company legally incorporated in Paraguay, dedicated to the development and optimization of mining activity. We provide them with the tool of tokenization of certified lithium reserves, seeking to innovate and revolutionize the electromobility industry. ",
