--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -19,7 +19,13 @@
     "idiomas": "Idiomas",
     "terms": "Términos y condiciones",
     "privacy": "Política de privacidad",
-    "trabaja": "Trabaja con nosotros"
+    "trabaja": "Trabaja con nosotros",
+    "proyectos de": "Proyectos de",
+    "tokenizacion": "tokenización",
+    "nuestros proyectos": "Nuestros Proyectos"
+
+
+
   },
   "nosotros": {
     "title": "Somos una compañía legalmente constituida en Paraguay, dedicada al desarrollo y optimización de la actividad minera. Les aportamos la herramienta de la tokenización de las reservas de litio certificadas, buscando con esto innovar y revolucionar la industria de la electromovilidad. ",
