tokenization projects added

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -23,6 +23,7 @@
     "trabaja": "Work with us",
    "proyectos de": "Tokenization",
     "tokenizacion": "projects",
+    "proyectos de tokenizacion": "Tokenization projects",
     "nuestros proyectos": "Our Proyects"
   },
   "nosotros": {
