--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -22,6 +22,7 @@
     "trabaja": "Trabaja con nosotros",
     "proyectos de": "Proyectos de",
     "tokenizacion": "tokenización",
+    "proyectos de tokenizacion": "Proyectos de tokenizacion",
     "nuestros proyectos": "Nuestros Proyectos"
 
 
