advances on footer

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -118,8 +118,9 @@
     "Términos y Condiciones": "Terms and Conditions",
     "Política de privacidad": "Privacy Policy",
     "todos los derechos reservados": "All rights reserved.",
-    "soporte": "Support"
-
+    "soporte": "Support",
+    "proyectos de tokenizacion": "Tokenization projects",
+    "nosotros": "About Us"
   },
   "stakingView": {
     "¿Qué es el Staking?": "What is Staking?",
