--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -22,7 +22,7 @@
     "trabaja": "Trabaja con nosotros",
     "proyectos de": "Proyectos de",
     "tokenizacion": "tokenización",
-    "proyectos de tokenizacion": "Proyectos de tokenizacion",
+    "proyectos de tokenizacion": "Proyectos de tokenización",
     "nuestros proyectos": "Nuestros Proyectos"
 
 
@@ -120,7 +120,11 @@
     "Términos y Condiciones": "Términos y Condiciones",
     "Política de privacidad": "Política de privacidad",
     "todos los derechos reservados": "Todos los derechos reservados.",
-    "soporte": "Soporte"
+    "soporte": "Soporte",
+    "proyectos de tokenizacion": "Proyectos de tokenización",
+    "nosotros": "Nosotros"
+
+
   },
   "stakingView": {
     "¿Qué es el Staking?": "¿Qué es el Staking?",
