links on footer

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -120,7 +120,11 @@
     "todos los derechos reservados": "All rights reserved.",
     "soporte": "Support",
     "proyectos de tokenizacion": "Tokenization projects",
-    "nosotros": "About Us"
+    "nosotros": "About Us",
+    "como invertir": "How to invest",
+    "noticias": "Press and Media"
+
+
   },
   "stakingView": {
     "¿Qué es el Staking?": "What is Staking?",
