--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -122,7 +122,10 @@
     "todos los derechos reservados": "Todos los derechos reservados.",
     "soporte": "Soporte",
     "proyectos de tokenizacion": "Proyectos de tokenización",
-    "nosotros": "Nosotros"
+    "nosotros": "Nosotros",
+    "como invertir": "Cómo invertir",
+    "noticias": "Medios y Noticias"
+
 
 
   },
