--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -132,8 +132,10 @@
   "stakingView": {
     "¿Qué es el Staking?": "¿Qué es el Staking?",
     "¿Qué es el Staking? Descripcion": "Consiste en depositar tus Atómico3 en un contrato inteligente (0xAAF3AC68Bf80d995d7793a401653713A05a67B08), manteniéndolos allí durante el plazo que elijas, beneficiándote de los intereses según el plazo elegido. Serán devueltos a tu monedero una vez finalizado el plazo (salvo que elijas renovarlo por un nuevo plazo).",
+    "¿Qué es el Staking? Descripcion 2": "Si quieres aprender cómo se hace puedes ver el tutorial que se encuentra al final de la página.",
     "¿Cómo lo puedo hacer?": "¿Cómo lo puedo hacer?",
     "¿Cómo lo puedo hacer? descripcion": "¡Haz clic en el botón de abajo!"
+    
   },
   "terms": {
     "Términos y condiciones de pago del token AT3": "Términos y condiciones de pago del token AT3",
