--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -183,7 +183,9 @@
     "como invertir": "How to invest in Atómico3?",
     "como invertir p1": "At Atómico3 you can invest in 4 different modalities: Staking, Peer to Peer, Buy AT3 or Happy Spring",
     "como invertir p2": "Here we will teach you how to do each of them. Click on the button below!",
-    "ver tutoriales": "Watch Tutorials"
+    "ver tutoriales": "Watch Tutorials",
+    "ver tutorial": "Watch tutorial"
+
 
   },
   "como invertir":{
