--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -185,7 +185,9 @@
     "como invertir": "¿Cómo Invertir en Atómico3?",
     "como invertir p1": "En Atómico3 puedes invertir en 4 modalidades diferentes: Staking, Peer to Peer, Comprar AT3 o Feliz Primavera",
     "como invertir p2": "Aquí te enseñaremos cómo realizar cada una de ellas ¡Cliquea en el botón de abajo!",
-    "ver tutoriales": "Ver Tutoriales"
+    "ver tutoriales": "Ver Tutoriales",
+    "ver tutorial": "Ver tutorial"
+
   },
   "como invertir": {
     "como invertir": "¿Cómo Invertir en Atómico3?",
