--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -181,7 +181,7 @@
   },
   "invertir":{
     "como invertir": "How to invest in Atómico3?",
-    "como invertir p1": "At Atómico3 you can invest in 4 different modalities: Staking, Peer to Peer, Buy AT3 or Happy Spring",
+    "como invertir p1": "At Atómico3 you can invest in 4 different modalities: Staking, Peer to Peer or Buy AT3",
     "como invertir p2": "Here we will teach you how to do each of them. Click on the button below!",
     "ver tutoriales": "Watch Tutorials"
 
