--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -183,7 +183,7 @@
   },
   "invertir": {
     "como invertir": "¿Cómo Invertir en Atómico3?",
-    "como invertir p1": "En Atómico3 puedes invertir en 4 modalidades diferentes: Staking, Peer to Peer, Comprar AT3 o Feliz Primavera",
+    "como invertir p1": "En Atómico3 puedes invertir en 4 modalidades diferentes: Staking, Peer to Peer o Comprar AT3",
     "como invertir p2": "Aquí te enseñaremos cómo realizar cada una de ellas ¡Cliquea en el botón de abajo!",
     "ver tutoriales": "Ver Tutoriales"
 
