--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -122,7 +122,8 @@
     "proyectos de tokenizacion": "Tokenization projects",
     "nosotros": "About Us",
     "como invertir": "How to invest",
-    "noticias": "Press and Media"
+    "noticias": "Press and Media",
+    "horarios": "Do you need help? Visit our help center or write to us at support from Monday to Friday from 8:00 a.m. to 8:00 p.m. Or from 9:00 a.m. to 5:00 p.m. saturdays and sundays." 
 
 
   },
