--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -124,7 +124,8 @@
     "proyectos de tokenizacion": "Proyectos de tokenización",
     "nosotros": "Nosotros",
     "como invertir": "Cómo invertir",
-    "noticias": "Medios y Noticias"
+    "noticias": "Medios y Noticias",
+    "horarios": "  ¿Necesitás ayuda? Visita nuestro help centre o escribinos a soporte de lunes a viernes de 8:00 a 20:00 hs. O de 9:00 a 17:00 hs sábados y domingos." 
 
 
 
