--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -242,8 +242,8 @@
     "indice9": "¿Podemos modificar esta Política? ¿Qué sucede ante una enajenación o cambio de control de las Sociedades?",
     "indice10": "¿Cuáles son las responsabilidades del Usuario?",
     "indice11": "¿Qué derechos tiene el Usuario y cómo puede ejercerlos?",
-    "indice12": "",
-    "indice13": ""
+    "indice12": "¿Cuáles son los mecanismos de resolución de conflictos y la jurisdicción y ley aplicable a esta Política?",
+    "indice13": "¿Quién es responsable de su información Personal?"
 
 
   }
