--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -351,10 +351,15 @@
       "informacion punto 8": {
         "p1": "Usted podrá seleccionar los tipos de información que no desea recibir de nosotros, incluyendo información promocional o publicitaria de Atómico. y/o de sus Afiliadas o de terceros. No obstante, usted no podrá impedir, mientras posea una cuenta de Usuario, que le enviemos información no promocional, tal como información sobre su cuenta de Usuario o sobre solicitudes o reclamos en curso. El Servicio puede transferir cookies a la unidad de almacenamiento del dispositivo a través del que accede a, o usa el Servicio. Las cookies son identificadores alfanuméricos que funcionan con su navegador web y que permiten que nuestros sistemas lo reconozcan y mejoren el uso del Servicio. Usted puede eliminar las cookies o evitar que las enviemos. ",
         "p2": "Consulte la sección de ayuda de su navegador para realizar cualquiera de estas operaciones. De cualquier modo, le recomendamos que permita las cookies de nuestro Servicio: algunas funciones del Servicio pueden no operar adecuadamente o inhabilitarse por completo si las cookies están deshabilitadas. ",
-        "p3": ". Asimismo, usted podrá solicitar la revocación del monitoreo de la ubicación geográfica de los dispositivos a través de los cuales accede a el Servicio. No obstante, esta revocación podría inhabilitar algunas funciones o impedir directamente la prestación del Servicio.",
+        "p3": "Asimismo, usted podrá solicitar la revocación del monitoreo de la ubicación geográfica de los dispositivos a través de los cuales accede a el Servicio. No obstante, esta revocación podría inhabilitar algunas funciones o impedir directamente la prestación del Servicio.",
         "p4": "El Servicio puede proporcionar enlaces a sitios web de terceros. Esos sitios web no son operados por nosotros y están fuera de nuestro control. Tenga presente que estos sitios pueden recopilar información sobre usted y que, al visitarlos, pasará a estar sujeto a sus propias políticas de privacidad, por consiguiente, recomendamos que lea esos y otros documentos que rijan su relación con los proveedores de esos sitios web. Atómico no es responsable de las prácticas de privacidad de estos sitios y no puede garantizar la seguridad de la información que recolectan.", 
         "p5": "Esta Política aplica solo al uso del Servicio, y no a otras aplicaciones o sitios web de terceros con los que Atómico tenga conexiones o hipervínculos."
+    },
+    "informacion punto 9": {
+      "p1": "Atómico se reserva el derecho a modificar esta Política en cualquier momento y con efecto inmediato. El Usuario será notificado de modificaciones a esta Política a través de los medios que Atómico estime convenientes (incluyendo, sin limitación, su publicación en la Plataforma), y acepta que el uso del Servicio con posterioridad a la notificación constituye aceptación íntegra de los nuevos términos de la Política.", 
+      "p2": "Asimismo, Atómico se reserva el derecho de habilitar el acceso y/o transferir a un tercero la Información Total en los supuestos de enajenación total o parcial, fusión, escisión o cambio de control de la empresa."
     }
+    
   }
 }
 }
