advances on punto12

--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -374,7 +374,17 @@
       "p5": "En ningún caso el Usuario podrá revocar el consentimiento y solicitar la supresión de su Información Personal a Atómico cuando exista un deber legal o contractual que le imponga la obligación a Atómico conservar la Información Personal.", 
       "p6": "En ningún caso cederemos su Información Personal a terceros sin obtener su consentimiento previo, salvo que sea necesario para el mantenimiento de nuestra relación con usted, para continuar prestando el Servicio, o para cumplir la normativa de protección de datos vigente. En particular se aclara, que en el marco de la prestación del Servicio Atómico podrá ceder su Información Personal a Afiliadas para la realización de operaciones o actividades asociadas al Servicio por parte de sus Afiliadas, en consecuencia, mediante la aceptación de esta Política el Usuario consiente expresamente que autoriza la cesión de su Información Personal a Afiliadas a de Atómico para la realización de operaciones o actividades asociadas al Servicio.", 
       "p7":"El Usuario que como titular de la Información Personal tiene la facultad de ejercer el derecho de acceso a la misma en forma gratuita a intervalos no inferiores a seis meses, salvo que acredite un interés legítimo al efecto conforme lo establecido en el artículo 14, inciso 3 de la Ley de Protección de Datos Personales. La AAIP, Órgano de Control de la Ley de Protección de Datos Personales, tiene la atribución de atender las denuncias y reclamos que se interpongan con relación al incumplimiento de las normas sobre protección de datos personales."
+    },
+    "informacion punto 12": {
+      "p1": "Esta Política se encuentra alineada en todos sus puntos por las leyes de la República Argentina y será interpretada de acuerdo con ella. Al igual que busca cumplir con estipulado en las normas de la Republica del Paraguay, y bajo el estricto control de la Secretaría de Prevención de Lavado de Dinero o Bienes.", 
+      "p2": "La AAIP, en su carácter de Órgano de Control de la Ley de Protección de Datos Personales tiene la atribución de atender las denuncias y reclamos que interpongan quienes resulten afectados en sus derechos por incumplimiento de las normas vigentes en materia de protección de datos personales.",
+      "p3": "Sin limitar lo anterior, ante cualquier diferencia, desacuerdo o conflicto derivado de la aplicación, interpretación, validez, y/o alcance de la presente Política, el Usuario debe comunicarse con Atómico de manera fehaciente, haciéndole llegar su reclamo para que las partes intenten llegar a un acuerdo. En caso de que, luego de transcurridos 20 (veinte) días de iniciado el reclamo, no hubiese sido posible arribar a una solución, el Usuario también podrá elegir y someter su reclamo a cualquiera de las siguientes instancias, de resultar competentes:",
+      "a": "Tribunales ordinarios de la Ciudad de Asunción, República del Paraguay, con competencia en la materia ",
+      "b": "Dirección General de Defensa y Protección del Consumidor del Gobierno de la Ciudad de Buenos Aires (más información en http://www.buenosaires.gob.ar/defensaconsumidor/direccion-general), o de la Provincia o municipalidad en donde el Usuario tenga su domicilio, y en la que exista una instancia de arbitraje o procedimiento para la solución de controversias.",
+      "c": "Tribunales ordinarios con competencia en la materia y asiento en el lugar en donde el Usuario tenga su domicilio."
+      
     }
+    
     
     
   }
